# urlx

./: Cargo.toml  LICENSE  README.md  justfile
src/: main.rs  tui.rs  urls.rs
