[package]
name = "urlx"
version = "0.3.0"
edition = "2021"

[profile.release]
strip = "symbols"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
regex = "1.5.4"
ratatui = "0.26.1"
crossterm = { version = "0.27.0", features = ["use-dev-tty"] }
anyhow = "1.0.79"
